app.css
:root{
  --navbar-height: 70px;
  --bell_color: #FF8F00;
  --new-student_color: #1A72E8;
  --pill_new-student_color: #155BBA;
}




#app{
  height: 100vh;
  background-color: #F8F9FA;
}

.m_app :is(ul, li, menu){
  list-style: none;
  margin: 0;
  padding: 0;
}

#app a{
  color: currentColor;
  text-decoration: none;
}

.m_app_body{
  width: 100%;
  height: calc(100% - var(--navbar-height));
}

.debug .m_navbar, .debug aside, .debug .m_main{
  border: 1px solid black;
}

.debug aside{
  height: 100%;
}



/* LAYOUT */

.m_app header{
  height: 70px;
}

.m_navbar{
  background-color: white;
}

.m_app_body a{
  color: currentColor;
  text-decoration: none;
}

/* aside nav */

.m_app_body aside{
  min-width: 70px;
  background-color: #041E34;
  background-image: url(./img/sidebar-bg.png);
  background-repeat: no-repeat;
}

.m_app_body aside ul{
  display: contents;
  list-style: none;
}

.m_app_body aside ul span{
  display: contents;
  list-style: none;
  margin-left: 1rem;
  display: none;
}

.m_app_body aside ul.panels > li{
  padding: 5px 10px;
}

.m_app_body aside ul i{
  width: 20px;
}

.m_app_body aside ul li:hover{
  background-color: rgba(255, 255, 255, 0.537);
}

.m_app_body nav{
  display: contents;
}

/* navbar header */

.m_logo_mobile{
  width: 50px;
}

.m-searchbar{
  position: relative;
}

.m_navbar{
  background-color: white;
}

input#searchbar{
  height: 100%;
  border: none;
  border-radius: 5px;
  background-color: #E5E5E5;
  height: 40px;
  width: 100%;
  padding-left: 40px;
}

.m_navbar i.fa-bell{
  color: var(--bell_color);
}

.m_icon_lens{
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  margin-left: 10px;
  pointer-events: none;
}

/* new-student */

.new-student{
  background-color: var(--new-student_color);
}

.new-student .m_bg-pill{
  background-color: var(--pill_new-student_color);
}

/* main_cards */

.main_cards table .m_code_icon{
  width: 10px;
  aspect-ratio: 1/1;
  line-height: 10px;
  text-align: center;
  border-radius: 50%;
}

.main_cards{
  overflow: auto;
}

@media screen and (min-width: 992px) {
  .m_app_body aside{
    min-width: 150px;
  }

  .m_app_body aside ul li span{
    display: inline-block;
  }
}

